--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <td>08:00 AM-09:20 AM</td>
           <td>CSE471</td>
           <td>CSE391</td>
-          <td rowspan="4">No Class</td>
+          <td rowspan="4">No <br>Class</td>
           <td>CSE391</td>
           <td colspan="2"></td>
           <td rowspan="4">Closed</td>
