--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hobbies</title>
 
     <style>
-        #lession1{
-            height: 500px;
-        }
+      #lession1 {
+        height: 500px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>My Projects:</h1>
-
-    
-</body>
+    <div class="projects-link">
+      <a href="task1.html">Task1</a>
+      <a href="task2.html">Task2</a>
+      <a href="task3.html">Task3</a>
+    </div>
+  </body>
 </html>
