--- a/pages/task2.html
+++ b/pages/task2.html
@@ -7,10 +7,15 @@
     <title>Task2</title>
 
     <style>
-
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Urbanist:wght@100;200;300;400;500&display=swap");
+        *{
+            font-family: "Poppins",sans-serif;
+        }
+        
         body{
-            background-image: linear-gradient(#de6262 , #ffb88c);
+            background: linear-gradient(#de6262 , #ffb88c);
             background-repeat: no-repeat;
+            background-size:cover;
         }
 
         .calculator{
@@ -25,8 +30,6 @@
     </style>
 </head>
 <body>
-
-
     <h2 id="top-name">Task2</h2>
  <div class="calculator">
             <table id="calc-table">
@@ -57,9 +60,6 @@
             </table>
         </div>
     </div>
-
-
-
 <script src="../js/Task2.js"></script>
 </body>
 
