--- a/pages/task1.html
+++ b/pages/task1.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task1</title>
+
+
 </head>
 <body>
+    <h3 id="quote-title">Quote Box</h3>
+
+
     <script src="../js/Task1.js"></script>
+
 </body>
 </html>
