--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,17 +7,46 @@
     <title>Hobbies</title>
 
     <style>
-      #lession1 {
-        height: 500px;
+      h1 {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+      }
+      .projects-link{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+      }
+
+      a{
+        width: 100px;
+        height: 50px;
+        background-color: rgb(241, 55, 55);
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: aliceblue;
+      }
+
+      a:hover{
+        color: #000;
       }
     </style>
+
   </head>
+
+
   <body>
+    
     <h1>My Projects:</h1>
     <div class="projects-link">
       <a href="task1.html">Task1</a>
       <a href="task2.html">Task2</a>
       <a href="task3.html">Task3</a>
     </div>
+
+
   </body>
 </html>
