--- a/pages/task1.html
+++ b/pages/task1.html
@@ -5,14 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task1</title>
+    <style>
+        .sectiontitle{
+            display: flex;
+            justify-content: center;
+        }
+
+        #red-button{
+            background-color: red;
+            padding: 15px;
+            border: none;
+
+
+        }
+         #blue-button{
+            background-color: blue;
+             padding: 15px;
+             border: none;
+            
+        }
+         #yellow-button{
+            background-color: yellow;
+             padding: 15px;
+             border: none;
+
+        }
+
+           #pink-button{
+            background-color: pink;
+             padding: 15px;
+             border: none;
+        }
+
+        #quotes{
+            width: 500px;
+            padding: 10px;
+            margin: auto;
+            border: 15px;
+            border-color: black;
+        }
+
+        
+    </style>
+
 
 
 </head>
 <body>
-    <h3 id="quote-title">Quote Box</h3>
+   
+    <div class="sectiontitle">
+         <h3 id="quote-title">Quote Box</h3>
+    </div>
+    <div id="quotes">
+          <p id="quote"></p>
+    </div>
 
+    <div class="quotebutton">
+        <button onclick="red()" type="button" id="red-button">Red</button>
+        <button onclick="blue()" type="button" id="blue-button">blue</button>
+        <button onclick="yellow()" type="button" id="yellow-button">yellow</button>
+        <button onclick="pink()" type="button" id="pink-button">pink</button>
+    </div>
 
     <script src="../js/Task1.js"></script>
-
 </body>
 </html>
