--- a/pages/task1.html
+++ b/pages/task1.html
@@ -40,6 +40,13 @@
         border: 15px;
         border-color: black;
       }
+
+      .quotebutton{
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        
+      }
     </style>
   </head>
   <body>
@@ -60,6 +67,6 @@
     </div>
 
     <script src="../js/Task1.js"></script>
-    
+
   </body>
 </html>
