--- a/pages/task1.html
+++ b/pages/task1.html
@@ -45,11 +45,24 @@
         margin-top: 10px;
         display: flex;
         justify-content: center;
-        
+      }
+
+      .heroconverter-title{
+        display: flex;
+        justify-content: center;
+
+      }
+
+      .hero_converter{
+        display: flex;
+        justify-content: center;
+
       }
     </style>
   </head>
   <body>
+
+    <!--Quote box-->
     <div class="sectiontitle">
       <h3 id="quote-title">Quote Box</h3>
     </div>
@@ -65,6 +78,27 @@
       </button>
       <button onclick="pink()" type="button" id="pink-button">pink</button>
     </div>
+
+    <hr>
+
+
+<!--Hero Converter-->
+<div class="heroconverter-title">
+    <h3>Hero Converter</h3>
+</div>
+    
+    <div class="section_container">
+        <div class="hero_converter">
+            <span class="hero_converter_text">Convert: </span><input id="converter_input" type="number">
+            <select name="unit" id="converter_unit">
+                <option value="lbtokg">LB to KG</option>
+                <option value="kgtolb">KG to LB</option>
+            </select>
+            <button onclick="convert()" type="button" id="converter_button">Go</button>
+            <span id="converter_result"></span>
+        </div>
+    </div>
+
 
     <script src="../js/Task1.js"></script>
 
