--- a/pages/task3.html
+++ b/pages/task3.html
@@ -24,7 +24,7 @@
     border-radius: 4px;
     color: #0d1b2a;
     font-size: 1.3rem;
-    background-color: #f1f1f1;
+    background-color: gray;
     outline: none;
     transition: .4s;
     resize: none;
