new about me sectiion

--- a/index.html
+++ b/index.html
@@ -28,19 +28,24 @@
     <!-- navbar section end-->
  
     
-    <!--Personal info section start-->
+    <!--About me section start-->
     <div class="about">
+      <div class="aboutme-img">
+           <img src="./images/movieposter1.jpg" width="300px">
+      </div>
+      <div class="aboutme-info">
       <h1>ABOUT ME</h1>
       <p>
-        I am <b>Raihan Romeo</b> from Dhaka,Bangladesh.<br />I am currently an
+        I am <span id="name">Raihan Romeo</span> from Dhaka,Bangladesh.<br />I am currently an
         undergraduate student studying Computer Science and Engineering at
         <a href="https://www.bracu.ac.bd/" target="_blank">Brac university</a
         >.<br />
         My goal is to become a full stack developer.
       </p>
     </div>
+    </div>
 
-    <!--Personal info section end-->
+    <!--About me section end-->
 
     <!-- Hobbies section start-->
     <div class="hobbies">
