--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="#"><h2>Contact</h2></a>
       <a href="./pages/projects.html"><h2>Projects</h2></a>
       <a href="#quote"><h2>Favourite quote</h2></a>
+      <a href="newpage.html"><h2>Newpage</h2></a>
     </div>
     </div>
     <!-- navbar section end-->
@@ -30,7 +31,7 @@
     
     <!--About me section start-->
     <div class="about">
-      <div class="aboutme-img">
+        <div class="aboutme-img">
            <img src="./images/movieposter1.jpg" width="300px">
       </div>
       <div class="aboutme-info">
@@ -167,6 +168,22 @@
     <!--table part end-->
 
     <footer>
+    <div class="personal-links">
+      <h1 id="personal-link-header">Personal links</h1>
+      <a
+        href="https://piazza.com/class/l8fcwp0qxsv615"
+        target="_blank"
+        id="piazza"
+        >Piazza</a
+      >
+      <a href="https://github.com/raihanromi" target="_blank" id="github"
+        >Github</a
+      >
+      <a href="https://bd.linkedin.com/" target="_blank" id="linkedin"
+        >Linkedin</a
+      >
+      <a href="https://twitter.com/" target="_blank" id="twitter">Twitter</a>
+    </div>
       <h4 id="modify">.</h4>
     </footer>
 
