--- a/pages/task3.html
+++ b/pages/task3.html
@@ -24,7 +24,7 @@
     border-radius: 4px;
     color: #0d1b2a;
     font-size: 1.3rem;
-    background-color: gray;
+    background-color: rgb(233, 229, 229);
     outline: none;
     transition: .4s;
     resize: none;
@@ -36,6 +36,7 @@
 </head>
 <body>
         <div class="magic-container">
+            <h1>MAGIC BOX!</h1>
             <textarea id="magic-input" rows="15"></textarea>
             <div class="magic-button">
                 <button onclick="cleartext()" type="button">Clear It</button>
