--- a/newpage.html
+++ b/newpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raihan Portfolio website</title>
+    <link rel="stylesheet" href="css/style1.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -11,6 +12,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;900&family=Source+Sans+Pro:wght@200;300;400;600;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -45,7 +49,7 @@
       <p class="section__subtitle section__subtitle--intro">
         Student/Front-end dev
       </p>
-      <img src="" alt="" />
+      <img src="images/myimg.jpg" alt="" class="intro__img" />
     </section>
 
     <!-- MY services-->
@@ -70,7 +74,7 @@
     <!-- About me-->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about"></p>
+      <p class="section__subtitle section__subtitle--about">Studying CSE at Brac university</p>
       <div class="about-me__body">
         <p>I am Raihan Romeo from Dhaka,Bangladesh</p>
         <p>
@@ -79,7 +83,7 @@
           <a href="https://www.bracu.ac.bd/" target="_blank">Brac university</a>
         </p>
         <p>My goal is to become a full stack developer</p>
-        <img src="images/movieposter1.jpg" alt="" />
+        <img src="images/movieposter1.jpg" alt="" width="200px"/>
       </div>
     </section>
 
