--- a/newpage.html
+++ b/newpage.html
@@ -54,42 +54,43 @@
 
     <!-- MY services-->
     <section class="my-services" id="services">
-      <h2 class="section__title section__title-services">My Hobbies</h2>
+      <h2 class="section__title section__title--services">My Hobbies</h2>
       <div class="services">
         <div class="service">
           <h3>Playing video games</h3>
-          <p></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, recusandae ipsam esse labore earum reprehenderit non nesciunt laboriosam praesentium hic, veniam deserunt repellat maxime velit totam vitae sed est eveniet.</p>
         </div>
         <div class="service">
           <h3>watching movies</h3>
-          <p></p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique modi facilis facere dolore qui, eaque, perferendis commodi ipsum sapiente inventore nihil? Non sit iure laudantium modi hic voluptates cumque voluptatem.</p>
         </div>
         <div class="service">
           <h3>Creating sketch</h3>
-          <p></p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sapiente ut nesciunt eum dolorum quidem nam recusandae enim commodi vero dicta, deleniti amet suscipit inventore nostrum blanditiis in corrupti.</p>
         </div>
       </div>
     </section>
 
     <!-- About me-->
-    <section class="about-me" id="about">
-      <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about">Studying CSE at Brac university</p>
-      <div class="about-me__body">
-        <p>I am Raihan Romeo from Dhaka,Bangladesh</p>
-        <p>
-          I am currently an undergraduate student studying Computer Science and
-          Engineering at
-          <a href="https://www.bracu.ac.bd/" target="_blank">Brac university</a>
-        </p>
-        <p>My goal is to become a full stack developer</p>
-        <img src="images/movieposter1.jpg" alt="" width="200px"/>
-      </div>
-    </section>
+        <!-- About me -->
+        <section class="about-me" id="about">
+           <h2 class="section__title section__title--about">Who I am</h2>
+           <p class="section__subtitle section__subtitle--about">Studying CSE at Bracu university</p>
+           
+           <div class="about-me__body">
+               <p>I am Raihan Romeo from Dhaka,Bangladesh.I am currently an
+        undergraduate student studying Computer Science and Engineering at
+        <a href="https://www.bracu.ac.bd/" target="_blank">Brac university</a
+        ></p>
+               <p>    My goal is to become a full stack developer.</p>
+           </div>
+           
+           <img src="images/myimg.jpg" alt="" class="about-me__img">
+        </section>
 
     <!-- My work-->
     <section class="my-work" id="work">
-      <h2 class="section__title">My Work</h2>
+      <h2 class="section__title">My Project</h2>
       <div class="portfolio">
         <a href="pages/task1.html" class="portfolio__item">
           <img src="images/project1.JPG" alt="" class="portfolio__img" />
@@ -104,7 +105,6 @@
     </section>
     <!-- Footer-->
     <footer>
-      <a href="mailto:demo@gmail.com">demo@gmail.com</a>
       <ul class="social-list">
         <li class="social-list__item">
           <a href="https://github.com/raihanromi" class="social-list__link"
@@ -113,17 +113,17 @@
         </li>
         <li class="social-list__item">
           <a href="https://bd.linkedin.com/" class="social-list__link"
-            >Linkedin</a
+            ><i class="fa-brands fa-linkedin"></i></a
           >
         </li>
         <li class="social-list__item">
-          <a href="https://twitter.com/" class="social-list__link">Twitter</a>
+          <a href="https://twitter.com/" class="social-list__link"><i class="fab fa-twitter"></i></a>
         </li>
         <li class="social-list__item">
           <a
             href="https://piazza.com/class/l8fcwp0qxsv615"
             class="social-list__link"
-            >Piazza</a
+            ><i class="fa-solid fa-p"></i></a
           >
         </li>
       </ul>
