--- a/newpage.html
+++ b/newpage.html
@@ -127,6 +127,15 @@
           >
         </li>
       </ul>
+      <h4 id="modify">.</h4>
     </footer>
+     <script>
+      let modifiedText = document.getElementById("modify");
+      let latestDate = new Date(document.lastModified);
+      let pageLocation = window.location.href;
+      modifiedText.innerHTML = `Last Updated : ${latestDate} and current page location : ${pageLocation}`;
+    </script>
+    <script src="js/index.js"></script>
+
   </body>
 </html>
