--- a/newpage.html
+++ b/newpage.html
@@ -19,16 +19,16 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/logo.png" alt="" width="200px"/>
+        <img src="images/logo.png" alt=""/>
       </div>
       <button class="nav-toggle" aria-label="toggle-navigation">
         <span class="hamburger"></span>
       </button>
       <nav class="nav">
-        <ul class="nab__list">
+        <ul class="nav__list">
           <li class="nav__item"><a href="#home" class="nav__link"></a>Home</li>
           <li class="nav__item">
-            <a href="#services" class="nav__link"></a>My Services
+            <a href="#services" class="nav__link"></a>My Hobbies
           </li>
           <li class="nav__item">
             <a href="#about" class="nav__link"></a>About me
@@ -102,6 +102,56 @@
           <img src="images/project3.JPG" alt="" class="portfolio__img" />
         </a>
       </div>
+    </section>
+    <!--Table section-->
+    <section>
+         <h1 id="cls-sch">MY class schedule</h1>
+    <div class="table-style">
+      <table>
+        <tr>
+          <th>Time/Day</th>
+          <th>Saturday</th>
+          <th>Sunday</th>
+          <th>Monday</th>
+          <th>Tuesday</th>
+          <th>Wednesday</th>
+          <th>Thursday</th>
+          <th>Friday</th>
+        </tr>
+        <tr>
+          <td>08:00 AM-09:20 AM</td>
+          <td>CSE471</td>
+          <td>CSE391</td>
+          <td rowspan="4">No <br>Class</td>
+          <td>CSE391</td>
+          <td colspan="2"></td>
+          <td rowspan="4">Closed</td>
+        </tr>
+        <tr>
+          <td>09:30 AM-10:50 AM</td>
+          <td>CSE471</td>
+          <td></td>
+          <td colspan="3"></td>
+        </tr>
+        <tr>
+          <td>02:00 PM-03:20 PM</td>
+          <td>CSE461</td>
+          <td>CSE391</td>
+          <td></td>
+          <td>CSE461</td>
+          <td>CSE461</td>
+        </tr>
+        <tr>
+          <td>03:30 PM-04:50 PM</td>
+          <td>CSE471</td>
+          <td>CSE391</td>
+          <td></td>
+          <td>CSE461</td>
+          <td>CSE471</td>
+        </tr>
+      </table>
+    </div>
+
     </section>
     <!-- Footer-->
     <footer>
