--- a/newpage.html
+++ b/newpage.html
@@ -21,7 +21,7 @@
       <div class="logo">
         <img src="images/logo.png" alt=""/>
       </div>
-      <button class="nav-toggle" aria-label="toggle-navigation">
+      <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
       </button>
       <nav class="nav">
@@ -179,12 +179,7 @@
       </ul>
       <h4 id="modify">.</h4>
     </footer>
-     <script>
-      let modifiedText = document.getElementById("modify");
-      let latestDate = new Date(document.lastModified);
-      let pageLocation = window.location.href;
-      modifiedText.innerHTML = `Last Updated : ${latestDate} and current page location : ${pageLocation}`;
-    </script>
+    
     <script src="js/index.js"></script>
 
   </body>
