modified some code

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <nav class="nav nav__list">
           <a href="#home" class="nav__link">Home</a>
             <a href="#about" class="nav__link">About me</a>
-            <a href="pages/projects.html" class="nav__link">My Projects</a>
-         <a href="#" class="nav__link">Contact</a>
+            <!-- <a href="pages/projects.html" class="nav__link">My Projects</a> -->
+            <a href="#work" class="nav__link">My Projects</a>
+         <a href="#Contact" class="nav__link">Contact</a>
       </nav>
     </header>
 
@@ -37,28 +38,10 @@
       <p class="section__subtitle section__subtitle--intro">
         Student/Front-end dev
       </p>
-      <img src="images/myimg.jpg" alt="" class="intro__img" />
     </section>
 
     <!-- MY services-->
-    <section class="my-services" id="services">
-      <h2 class="section__title section__title--services">My Hobbies</h2>
-      <div class="services">
-        <div class="service">
-          <h3>Playing video games</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, recusandae ipsam esse labore earum reprehenderit non nesciunt laboriosam praesentium hic, veniam deserunt repellat maxime velit totam vitae sed est eveniet.</p>
-        </div>
-        <div class="service">
-          <h3>watching movies</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique modi facilis facere dolore qui, eaque, perferendis commodi ipsum sapiente inventore nihil? Non sit iure laudantium modi hic voluptates cumque voluptatem.</p>
-        </div>
-        <div class="service">
-          <h3>Creating sketch</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sapiente ut nesciunt eum dolorum quidem nam recusandae enim commodi vero dicta, deleniti amet suscipit inventore nostrum blanditiis in corrupti.</p>
-        </div>
-      </div>
-    </section>
-
+  
     <!-- About me-->
         <!-- About me -->
         <section class="about-me" id="about">
@@ -96,7 +79,7 @@
 
     </section>
     <!-- Footer-->
-    <footer>
+    <footer id="Contact">
       <ul class="social-list">
         <li class="social-list__item">
           <a href="https://github.com/raihanromi" class="social-list__link"
@@ -104,18 +87,8 @@
           >
         </li>
         <li class="social-list__item">
-          <a href="https://bd.linkedin.com/" class="social-list__link"
+          <a href="https://www.linkedin.com/in/raihan-romeo/" class="social-list__link"
             ><i class="fa-brands fa-linkedin"></i></a
-          >
-        </li>
-        <li class="social-list__item">
-          <a href="https://twitter.com/" class="social-list__link"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li class="social-list__item">
-          <a
-            href="https://piazza.com/class/l8fcwp0qxsv615"
-            class="social-list__link"
-            ><i class="fa-solid fa-p"></i></a
           >
         </li>
       </ul>
