TODO:add new project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raihan Portfolio website</title>
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/style1.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -12,21 +12,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;900&family=Source+Sans+Pro:wght@200;300;400;600;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;900&family=Source+Sans+Pro:wght@200;300;400;600;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="images/logo.png" alt=""/>
+        <img src="images/logo.png" alt="" />
       </div>
       <nav class="nav nav__list">
-          <a href="#home" class="nav__link">Home</a>
-            <a href="#about" class="nav__link">About me</a>
-            <!-- <a href="pages/projects.html" class="nav__link">My Projects</a> -->
-            <a href="#work" class="nav__link">My Projects</a>
-         <a href="#Contact" class="nav__link">Contact</a>
+        <a href="#home" class="nav__link">Home</a>
+        <a href="#about" class="nav__link">About me</a>
+        <!-- <a href="pages/projects.html" class="nav__link">My Projects</a> -->
+        <a href="#work" class="nav__link">My Projects</a>
+        <a href="#Contact" class="nav__link">Contact</a>
       </nav>
     </header>
 
@@ -40,25 +43,25 @@
       </p>
     </section>
 
-    <!-- MY services-->
-  
-    <!-- About me-->
-        <!-- About me -->
-        <section class="about-me" id="about">
-           <h2 class="section__title section__title--about">Who I am</h2>
-           <p class="section__subtitle section__subtitle--about">Studying CSE at Bracu university</p>
-           
-           <div class="about-me__body">
-               <p>I am Raihan Romeo from Dhaka,Bangladesh.I am currently an
-        undergraduate student studying Computer Science and Engineering at
-        <a href="https://www.bracu.ac.bd/" target="_blank">Brac university</a
-        ></p>
-           </div>
-           
-           <img src="images/myimg.jpg" alt="" class="about-me__img">
-        </section>
+    <!-- About me -->
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about">
+        Studying CSE at Bracu university
+      </p>
 
-    <!-- My work-->
+      <div class="about-me__body">
+        <p>
+          I am Raihan Romeo from Dhaka,Bangladesh.I am currently an
+          undergraduate student studying Computer Science and Engineering at
+          <b>Brac university</b>
+        </p>
+      </div>
+
+      <img src="images/myimg.jpg" alt="" class="about-me__img" />
+    </section>
+
+    <!-- My Project -->
     <section class="my-work" id="work">
       <h2 class="section__title">My Project</h2>
       <div class="portfolio">
@@ -74,19 +77,20 @@
       </div>
     </section>
 
-    </section>
     <!-- Footer-->
     <footer id="Contact">
       <ul class="social-list">
         <li class="social-list__item">
           <a href="https://github.com/raihanromi" class="social-list__link"
-            ><i class="fa-brands fa-github"></i></a
-          >
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a href="https://www.linkedin.com/in/raihan-romeo/" class="social-list__link"
-            ><i class="fa-brands fa-linkedin"></i></a
-          >
+          <a
+            href="https://www.linkedin.com/in/raihan-romeo/"
+            class="social-list__link"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
       </ul>
     </footer>
