--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         HI,I am <strong>Raihan Romeo</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        Student/Front-end dev
+        Full Stack web developer
       </p>
     </section>
 
