new project added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         HI,I am <strong>Raihan Romeo</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">
-        Full Stack web developer
+        Web Developer
       </p>
     </section>
 
@@ -47,18 +47,20 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        Studying CSE at Bracu university
+        Currently, I am learning full-stack web development
       </p>
 
       <div class="about-me__body">
         <p>
-          I am Raihan Romeo from Dhaka,Bangladesh.I am currently an
-          undergraduate student studying Computer Science and Engineering at
-          <b>Brac university</b>
+          Highly motivated and skilled Computer Science graduate with a passion
+          for problem-solving through code and a strong aptitude for web
+          development. Proficient in various programming languages including
+          Python, JavaScript, and PHP. Experienced in utilizing different tools
+          and technologies.
         </p>
       </div>
 
-      <img src="images/myimg.jpg" alt="" class="about-me__img" />
+      <img src="images/mypic.jpg" alt="" class="about-me__img" />
     </section>
 
     <!-- My Project -->
@@ -76,6 +78,23 @@
         </a>
         <a href="https://github.com/raihanromi/onlineSchool" class="portfolio__item">
           <img src="images/project4.png" alt="" class="portfolio__img" />
+        </a>
+        <a href="https://github.com/raihanromi/Note-app" class="portfolio__item">
+          <img src="images/note.png" alt="" class="portfolio__img" />
+        </a>
+        <a href="https://github.com/raihanromi/product-recommendation-system" class="portfolio__item">
+          <img src="images/product.png" alt="" class="portfolio__img" />
+        </a>
+        <a href="https://github.com/raihanromi/chat-app" class="portfolio__item">
+          <img src="images/chat.png" alt="" class="portfolio__img" />
+        </a>
+
+        <a href="https://github.com/raihanromi/social_app" class="portfolio__item">
+          <img src="images/social.png" alt="" class="portfolio__img" />
+        </a>
+        
+        <a href="https://github.com/raihanromi/WishList_MERN" class="portfolio__item">
+          <img src="images/wishlist.png" alt="" class="portfolio__img" />
         </a>
       
       </div>
