--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
       <h1 class="section__title section__title--intro">
         HI,I am <strong>Raihan Romeo</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        Web Developer
-      </p>
+      <p class="section__subtitle section__subtitle--intro">Web Developer</p>
     </section>
 
     <!-- About me -->
@@ -76,27 +74,44 @@
         <a href="pages/task3.html" class="portfolio__item">
           <img src="images/project3.JPG" alt="" class="portfolio__img" />
         </a>
-        <a href="https://github.com/raihanromi/onlineSchool" class="portfolio__item">
+        <a
+          href="https://github.com/raihanromi/onlineSchool"
+          class="portfolio__item"
+        >
           <img src="images/project4.png" alt="" class="portfolio__img" />
         </a>
-        <a href="https://github.com/raihanromi/Note-app" class="portfolio__item">
+        <a
+          href="https://github.com/raihanromi/Note-app"
+          class="portfolio__item"
+        >
           <img src="images/note.png" alt="" class="portfolio__img" />
         </a>
-        <a href="https://github.com/raihanromi/product-recommendation-system" class="portfolio__item">
+        <a
+          href="https://github.com/raihanromi/product-recommendation-system"
+          class="portfolio__item"
+        >
           <img src="images/product.png" alt="" class="portfolio__img" />
         </a>
-        <a href="https://github.com/raihanromi/chat-app" class="portfolio__item">
+        <a
+          href="https://github.com/raihanromi/chat-app"
+          class="portfolio__item"
+        >
           <img src="images/chat.png" alt="" class="portfolio__img" />
         </a>
 
-        <a href="https://github.com/raihanromi/social_app" class="portfolio__item">
+        <a
+          href="https://github.com/raihanromi/social_app"
+          class="portfolio__item"
+        >
           <img src="images/social.png" alt="" class="portfolio__img" />
         </a>
-        
-        <a href="https://github.com/raihanromi/WishList_MERN" class="portfolio__item">
+
+        <a
+          href="https://github.com/raihanromi/WishList_MERN"
+          class="portfolio__item"
+        >
           <img src="images/wishlist.png" alt="" class="portfolio__img" />
         </a>
-      
       </div>
     </section>
 
@@ -105,14 +120,14 @@
       <ul class="social-list">
         <li class="social-list__item">
           <a href="https://github.com/raihanromi" class="social-list__link"
-            ><i class="fa-brands fa-github"></i
+            ><i class="fa-brands fa-github fa-xl" style="color: black"></i
           ></a>
         </li>
         <li class="social-list__item">
           <a
             href="https://www.linkedin.com/in/raihan-romeo/"
             class="social-list__link"
-            ><i class="fa-brands fa-linkedin"></i
+            ><i class="fa-brands fa-linkedin fa-xl" style="color: black"></i
           ></a>
         </li>
       </ul>
