--- a/index.html
+++ b/index.html
@@ -2,136 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Raihan Portfolio website</title>
-    <link rel="stylesheet" href="css/style1.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Raihan Romeo | Portfolio Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;900&family=Source+Sans+Pro:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      })(window.location);
+    </script>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="images/logo.png" alt="" />
-      </div>
-      <nav class="nav nav__list">
-        <a href="#home" class="nav__link">Home</a>
-        <a href="#about" class="nav__link">About me</a>
-        <!-- <a href="pages/projects.html" class="nav__link">My Projects</a> -->
-        <a href="#work" class="nav__link">My Projects</a>
-        <a href="#Contact" class="nav__link">Contact</a>
-      </nav>
-    </header>
-
-    <!-- Introduction -->
-    <section class="intro" id="home">
-      <h1 class="section__title section__title--intro">
-        HI,I am <strong>Raihan Romeo</strong>
-      </h1>
-      <p class="section__subtitle section__subtitle--intro">Web Developer</p>
-    </section>
-
-    <!-- About me -->
-    <section class="about-me" id="about">
-      <h2 class="section__title section__title--about">Who I am</h2>
-      <p class="section__subtitle section__subtitle--about">
-        Currently, I am learning full-stack web development
-      </p>
-
-      <div class="about-me__body">
-        <p>
-          Highly motivated and skilled Computer Science graduate with a passion
-          for problem-solving through code and a strong aptitude for web
-          development. Proficient in various programming languages including
-          Python, JavaScript, and PHP. Experienced in utilizing different tools
-          and technologies.
-        </p>
-      </div>
-
-      <img src="images/mypic.jpg" alt="" class="about-me__img" />
-    </section>
-
-    <!-- My Project -->
-    <section class="my-work" id="work">
-      <h2 class="section__title">My Project</h2>
-      <div class="portfolio">
-        <a href="pages/task1.html" class="portfolio__item">
-          <img src="images/project1.JPG" alt="" class="portfolio__img" />
-        </a>
-        <a href="pages/task2.html" class="portfolio__item">
-          <img src="images/project2.JPG" alt="" class="portfolio__img" />
-        </a>
-        <a href="pages/task3.html" class="portfolio__item">
-          <img src="images/project3.JPG" alt="" class="portfolio__img" />
-        </a>
-        <a
-          href="https://github.com/raihanromi/onlineSchool"
-          class="portfolio__item"
-        >
-          <img src="images/project4.png" alt="" class="portfolio__img" />
-        </a>
-        <a
-          href="https://github.com/raihanromi/Note-app"
-          class="portfolio__item"
-        >
-          <img src="images/note.png" alt="" class="portfolio__img" />
-        </a>
-        <a
-          href="https://github.com/raihanromi/product-recommendation-system"
-          class="portfolio__item"
-        >
-          <img src="images/product.png" alt="" class="portfolio__img" />
-        </a>
-        <a
-          href="https://github.com/raihanromi/chat-app"
-          class="portfolio__item"
-        >
-          <img src="images/chat.png" alt="" class="portfolio__img" />
-        </a>
-
-        <a
-          href="https://github.com/raihanromi/social_app"
-          class="portfolio__item"
-        >
-          <img src="images/social.png" alt="" class="portfolio__img" />
-        </a>
-
-        <a
-          href="https://github.com/raihanromi/WishList_MERN"
-          class="portfolio__item"
-        >
-          <img src="images/wishlist.png" alt="" class="portfolio__img" />
-        </a>
-      </div>
-    </section>
-
-    <!-- Footer-->
-    <footer id="Contact">
-      <ul class="social-list">
-        <li class="social-list__item">
-          <a href="https://github.com/raihanromi" class="social-list__link"
-            ><i class="fa-brands fa-github fa-xl" style="color: black"></i
-          ></a>
-        </li>
-        <li class="social-list__item">
-          <a
-            href="https://www.linkedin.com/in/raihan-romeo/"
-            class="social-list__link"
-            ><i class="fa-brands fa-linkedin fa-xl" style="color: black"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
-    <script src="js/index.js"></script>
+    <main id="root"></main>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
